Fix issue where single project comparison was squished, fix hide labels if they dont fit

--- a/app/assets/stylesheets/application/components/chart.scss
+++ b/app/assets/stylesheets/application/components/chart.scss
@@ -2,6 +2,9 @@
 
 // .c-chart
 .c-chart--horizontal-bar, .c-chart--vertical-bar {
+  svg {
+    overflow: visible !important;
+  }
   .bb-chart-text .bb-text {
     font-weight: bold;
     font-size: 16px;
